erpnext/add-site-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-ovenube-agroinversionesolmos
  # Optional Labels
  labels:
    app.kubernetes.io/instance: frappe-bench-0001-erpnext
  annotations:
    # required for cert-manager letsencrypt
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    # other annotations as needed, e.g timestamp
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: agroinversionesolmos.t1.ovenube.com
    http:
      paths:
      - backend:
          serviceName: frappe-bench-0001-erpnext
          servicePort: 80
        path: /
  tls:
  - hosts:
    - agroinversionesolmos.t1.ovenube.com
    secretName: agroinversionesolmos-ovenube-tls
